package command;

/**
 * 灯类---具体执行者
 */
public class Lamp {

    public void on(){
        System.out.println("灯打开了...");
    }

    public void off(){
        System.out.println("灯关闭了...");
    }

}
